Fix iframe not responsive, add symbols

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -42,13 +42,13 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   max-width: 100%;
   width: var(--max-width);
 }
 
 .card {
-  padding: 1rem 1.2rem;
+  padding: 0.5rem 0.75rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
@@ -60,9 +60,11 @@
   transition: transform 200ms;
 }
 
-.card h2 {
+.card h4 {
+  font-size: 1.2rem;
   font-weight: 600;
-  margin-bottom: 0.7rem;
+  margin-bottom: 0.5rem;
+  text-wrap: balance;
 }
 
 .card p {
@@ -113,13 +115,17 @@
 .iFrameWrapper {
   display: block;
   overflow: hidden;
-  height: 212px;
+  width: 100%;
+  max-width: 450px;
+  aspect-ratio: 2.13 / 1;
   /* transform: translateY(0px); */
   border-radius: 12px;
   border: 1px solid rgba(var(--callout-border-rgb), 0.3);
 }
 
 .iFrame {
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -145,22 +151,27 @@
 @media (max-width: 700px) {
   .main {
     margin-top: 1rem;
-    padding: 2rem;
+    padding: 2rem 1rem;
   }
 
   .grid {
-    grid-template-columns: 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     margin-bottom: 120px;
-    max-width: 320px;
+    /* max-width: 450px; */
     text-align: center;
   }
 
   .card {
-    padding: 1rem 2.5rem;
+    padding: 0.5rem 0.75rem;
   }
 
-  .card h2 {
+  .card h4 {
+    font-size: 1rem;
     margin-bottom: 0.5rem;
+  }
+
+  .card p {
+    font-size: 0.8rem;
   }
 
   .center {
@@ -217,11 +228,11 @@
 }
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
+/* @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
   }
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   .vercelLogo {
